Fixed error when adding adjacent blocks (reported by Fabri). Modified dependency messages.